<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="140dp"
        android:text="@string/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchParameters" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="112dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/search_label"
        android:textColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchParam" />

    <EditText
        android:id="@+id/searchParam"
        android:layout_width="300dp"
        android:layout_height="69dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        android:drawableStart="@drawable/search"
        android:ems="10"
        android:inputType="text"
        android:hint="Search"
        android:textColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/searchParameters"
        android:layout_width="224dp"
        android:layout_height="145dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:textColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/nameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:textColor="@color/teal_200" />

        <RadioButton
            android:id="@+id/locationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_label"
            android:textColor="@color/teal_200" />

        <RadioButton
            android:id="@+id/ratingButton"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:text="@string/rating_label"
            android:textColor="@color/teal_200" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultsView"
        android:layout_width="401dp"
        android:layout_height="241dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchParameters"
        app:layout_constraintVertical_bias="0.995" />

</androidx.constraintlayout.widget.ConstraintLayout>