<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/postButton"
        android:layout_width="144dp"
        android:layout_height="68dp"
        android:layout_marginBottom="48dp"
        android:text="@string/post_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewText"
        app:layout_constraintVertical_bias="0.127" />

    <EditText
        android:id="@+id/reviewText"
        android:layout_width="289dp"
        android:layout_height="88dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:hint="@string/write_review"
        android:inputType="text"
        android:textColor="#017FB8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintVertical_bias="0.0" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="241dp"
        android:layout_height="56dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="172dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:numStars="5"/>

    <TextView
        android:id="@+id/restaurant_display"
        android:layout_width="157dp"
        android:layout_height="63dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="60dp"
        android:scaleX="2"
        android:scaleY="2"
        android:text="TextView"
        android:textColor="#FFFF00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurant_rating"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="TextView"
        android:textColor="#017FB8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/restaurant_display" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviews_list"
        android:layout_width="361dp"
        android:layout_height="164dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postButton" />

</androidx.constraintlayout.widget.ConstraintLayout>